# uscgaux-ask

./: .chatgptignore  .gitignore  .pylintrc  AGENTS.md  ASK_overview.md  LICENSE.txt  README.example.md  README.md  filter_utils.py  liccheck.ini  pyproject.toml  pytest.ini  qdrant_check.py  rag.py  registry.py  requirements-dev.txt  requirements.txt  sidebar.py  streamlit_ui_check.py  ui.py  ui_utils.py
.streamlit/: config.toml  secrets.toml.example
config/: acronyms.csv  retrieval_context.xlsx  terms.csv
docs/: ACKNOWLEDGMENTS.md  CHANGELOG.md  ask_overview.md  faqs.md  library_overview.md  project_development_workflow.md  roadmap.md  tos.md
logs/: license_scan_results.txt
pages/: Library.py  Terms_of_service.py
pytests/: test_response_quality.py  user_question_list_full.txt
rag_eval/: ASK-groundtruth-v3.jsonl  evaluator_playground.ipynb  evaluator_with_qa.ipynb  feedback_tester.py  one_example_easy.jsonl  one_example_tough.jsonl  rag_tester.ipynb  simple_inference_tester.ipynb
testing/: dataset_manager.ipynb  evaluator_with_qa.ipynb  langsmith_dataset_manager.ipynb  rag_tester.ipynb
tests/: CATALOG_sample.xlsx  conftest.py  tempCodeRunnerFile.py  test_app_smoke_live.py  test_backends_bridge_live.py  test_catalog_filter.py  test_config_csvs.py  test_get_retrieval_context.py  test_google_credentials.py  test_registry_filter.py  test_registry_status.py  test_response_quality.py  test_retriever.py  test_sidebar_schema.py  test_ui.py  test_uscgaux_dependency.py  user_question_list.txt
utils/: backends_bridge.py  catalog.py  chat_model_factory.py  filter.py  (+6 more)
(+13 files in other folders)
